--- a/client/package.json
+++ b/client/package.json
@@ -62,5 +62,9 @@
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
     "tailwindcss": "^3.1.6"
-  }
+  },
+  "engines": {
+    "node": "14.x"
+}
+
 }
